--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -7,9 +7,19 @@
 }
 
 .project{
-    transition: .5s;
+    transition: .6s;
 }
 
 .project:hover{
 transform: scale(1.08);
+}
+
+a{
+    text-decoration: none;
+    color: #ffb001;
+}
+
+a:hover{
+    text-decoration: none;
+    color: #ffb001;
 }
