--- a/src/components/Skill/Skill.css
+++ b/src/components/Skill/Skill.css
@@ -4,3 +4,11 @@
     font-size: 25px;
     /* font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; */
 }
+
+.skilllIcon{
+    transition: .2s;
+}
+
+.skilllIcon:hover {
+    transform: scale(1.4);
+}
